@@ -1,4 +1,8 @@
-﻿zg 16.08.2014 22:08:40 +0200 - build 4053
+﻿drkns 17.08.2014 00:53:51 +0200 - build 4054
+
+1. Уточнение 4052.
+
+zg 16.08.2014 22:08:40 +0200 - build 4053
 
 1. быстрый поиск в панелях - честное окно.
 
